# OscProb

./: .clang-format  .gitignore  .travis.yml  Absorption.cxx  Absorption.h  Absorption_8cxx.html  Absorption_8cxx_source.html  Absorption_8h.html  Absorption_8h.js  Absorption_8h_source.html  CMakeLists.txt  Definitions_8h.html  Definitions_8h.js  Definitions_8h_source.html  Doxyfile  EarthModel.cxx  EarthModel.h  EarthModelBase.cxx  EarthModelBase.h  EarthModelBase_8cxx.html  EarthModelBase_8cxx_source.html  EarthModelBase_8h.html  EarthModelBase_8h.js  EarthModelBase_8h_source.html  EarthModelBinned.cxx  EarthModelBinned.h  EarthModelBinned_8cxx.html  EarthModelBinned_8cxx_source.html  EarthModelBinned_8h.html  EarthModelBinned_8h.js  EarthModelBinned_8h_source.html  EigenPoint.cxx  EigenPoint.h  EigenPoint_8cxx.html  EigenPoint_8cxx_source.html  EigenPoint_8h.html  EigenPoint_8h.js  EigenPoint_8h_source.html  LICENSE  LinkDef.h  (+366 more)
.github/workflows/: c-cpp.yml  cmake-single-platform.yml  doxygen.yml
EarthTables/: earth_binned_default.txt  model_defaults.hpp  prem_default.txt
MatrixDecomp/: CMakeLists.txt  LinkDef.h  Makefile  zheevc3.cxx  zheevc3.h  zheevh3.cxx  zheevh3.h  zheevq3.cxx  zheevq3.h  zhetrd3.cxx  zhetrd3.h
PremTables/: prem_15layers.txt  prem_15layers_bkp.txt  prem_425layers.txt  prem_44layers.txt  prem_default.txt  prem_lbl.txt
cmake/functions/: CMakeLists.txt  oscProbAddRootDictionary.cmake
cmake/packaging/: CMakeLists.txt  install.cmake  oscprob-config.cmake  package.cmake  prem_default.hpp.in
doxygen/html/: Absorption_8cxx.html  Absorption_8cxx_source.html  Absorption_8h.html  Absorption_8h_source.html  EigenPoint_8cxx.html  EigenPoint_8cxx_source.html  EigenPoint_8h.html  EigenPoint_8h_source.html  MainPage_8md.html  MainPage_8md_source.html  NuPath_8cxx.html  NuPath_8cxx_source.html  NuPath_8h.html  NuPath_8h_source.html  PMNS__Base_8cxx.html  PMNS__Base_8cxx_source.html  PMNS__Base_8h.html  PMNS__Base_8h_source.html  PMNS__Decay_8cxx.html  PMNS__Decay_8cxx_source.html  PMNS__Decay_8h.html  PMNS__Decay_8h_source.html  PMNS__Deco_8cxx.html  PMNS__Deco_8cxx_source.html  PMNS__Deco_8h.html  PMNS__Deco_8h_source.html  PMNS__Fast_8cxx.html  PMNS__Fast_8cxx_source.html  PMNS__Fast_8h.html  PMNS__Fast_8h_source.html  PMNS__Iter_8cxx.html  PMNS__Iter_8cxx_source.html  PMNS__Iter_8h.html  PMNS__Iter_8h_source.html  PMNS__LIV_8cxx.html  PMNS__LIV_8cxx_source.html  PMNS__LIV_8h.html  PMNS__LIV_8h_source.html  PMNS__NSI_8cxx.html  PMNS__NSI_8cxx_source.html  (+106 more)
doxygen/latex/: Absorption_8cxx.tex  Absorption_8h.tex  EigenPoint_8cxx.tex  EigenPoint_8h.tex  MainPage_8md.tex  NuPath_8cxx.tex  NuPath_8h.tex  PMNS__Base_8cxx.tex  PMNS__Base_8h.tex  PMNS__Decay_8cxx.tex  PMNS__Decay_8h.tex  PMNS__Deco_8cxx.tex  PMNS__Deco_8h.tex  PMNS__Fast_8cxx.tex  PMNS__Fast_8h.tex  PMNS__Iter_8cxx.tex  PMNS__Iter_8h.tex  PMNS__LIV_8cxx.tex  PMNS__LIV_8h.tex  PMNS__NSI_8cxx.tex  PMNS__NSI_8h.tex  PMNS__Sterile_8cxx.tex  PMNS__Sterile_8h.tex  PremModel_8cxx.tex  PremModel_8h.tex  annotated.tex  classOscProb_1_1Absorption.tex  classOscProb_1_1PMNS__Base.eps  classOscProb_1_1PMNS__Base.tex  classOscProb_1_1PMNS__Decay.eps  classOscProb_1_1PMNS__Decay.tex  classOscProb_1_1PMNS__Deco.eps  classOscProb_1_1PMNS__Deco.tex  classOscProb_1_1PMNS__Fast.eps  classOscProb_1_1PMNS__Fast.tex  classOscProb_1_1PMNS__Iter.eps  (+37 more)
inc/: Absorption.h  Definitions.h  EarthModelBase.h  EarthModelBinned.h  EigenPoint.h  LinkDef.h  NuPath.h  PMNS_Avg.h  PMNS_Base.h  PMNS_BaseAvg.h  PMNS_Decay.h  PMNS_Deco.h  PMNS_DensityMatrix.h  PMNS_Fast.h  PMNS_GQD.h  PMNS_Iter.h  PMNS_LIV.h  PMNS_LIVS.h  PMNS_Maltoni.h  PMNS_NSI.h  PMNS_NUNM.h  PMNS_OQS.h  PMNS_SNSI.h  PMNS_Sterile.h  PMNS_TaylorExp.h  PremModel.h  SKMatricesPoint.h  complexsolver.h  exceptions.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_2.js  defines_3.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+48 more)
src/: Absorption.cxx  EarthModelBase.cxx  EarthModelBinned.cxx  EigenPoint.cxx  NuPath.cxx  PMNS_Avg.cxx  PMNS_Base.cxx  PMNS_BaseAvg.cxx  PMNS_Decay.cxx  PMNS_Deco.cxx  PMNS_DensityMatrix.cxx  PMNS_Fast.cxx  PMNS_GQD.cxx  PMNS_Iter.cxx  PMNS_LIV.cxx  PMNS_LIVS.cxx  PMNS_Maltoni.cxx  PMNS_NSI.cxx  PMNS_NUNM.cxx  PMNS_OQS.cxx  PMNS_SNSI.cxx  PMNS_Sterile.cxx  PMNS_TaylorExp.cxx  PremModel.cxx  SKMatricesPoint.cxx  complexsolver.cxx
test/: CMakeLists.txt  CheckProbs.C  MakeTestSamples.C  StressTest.C  TestMethods.C  Utils.h  colormod.h
test/data/: PMNS_Avg_test_values.root  PMNS_Decay_test_values.root  PMNS_Deco_test_values.root  PMNS_Fast_test_values.root  PMNS_GQD_test_values.root  PMNS_Iter_test_values.root  PMNS_LIV_test_values.root  PMNS_NSI_test_values.root  PMNS_NUNM_test_values.root  PMNS_OQS_test_values.root  PMNS_SNSI_test_values.root  PMNS_Sterile_test_values.root  PMNS_TaylorExp_test_values.root  PMNS_TayloreExp_test_values.root
test/profile/: Makefile  run_callgrind.sh
test/profile/inc/: Utils.h
test/profile/src/: stress.cc
tutorial/: DecoProb.C  DecoProb2D.C  DecoTracks2D.C  DrawDecayCompare.C  DrawEarthOscillation.C  DrawFixedBaseline_Deco.C  DrawFixedCosT.C  DrawFixedCosTNUNM.C  IterTest.C  LoadOscProb.C  MakeOscillogram.C  Oscillogram.C  SetNiceStyle.C  TimeMeasurement.C  TimeMeasurement_C_ACLiC_dict.cxx_tmp_7711  VariationTest.C  VariationTestCosT.C  crossSection.root  data_energy_flux.txt  diff_weight  diff_weight.root  graphTime.root  macroTestTaylor.C  oscillogram_NSIs_IO_Ushak.C  oscillogram_NSIs_NO_Ushak.C  precFormula.C  precFormula_C_ACLiC_dict.cxx_tmp_8242  showModel.C  showPaths.C  simpleExamples.C  testAvgProb.C  testAvgProbBoth.C  testAvgProbCosT.C  testAvgProb_C_ACLiC_dict.cxx_tmp_24871  testNUNM.C  testOQS.C
utils/: Definitions.h  complexsolver.h
(+67 files in other folders)
